# AttendanceBot-Discord

./: .env.development  Cargo.toml  LICENSE  README.md  diesel.toml
migrations/2024-11-05-102222_create_users/: up.sql
migrations/2024-11-06-040421_create_teams/: up.sql
migrations/2024-11-06-040538_create_members/: up.sql
migrations/2024-11-06-040843_create_member_attendance/: up.sql
src/: main.rs  schema.rs
