[package]
name = "attendance_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = [ "full" ] }
serenity = { default-features = false, features = [ "client", "gateway", "model", "rustls_backend" ], version = "0.12.2" }
dotenv = "0.4"
diesel = { version = "1.4", features = ["postgresql", "r2d2"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
